<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:text="@string/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="57dp"
        android:text="@string/textPorDefecto"
        app:layout_constraintBottom_toTopOf="@+id/zonaElección"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <RadioGroup
        android:id="@+id/zonaElección"
        android:layout_width="340dp"
        android:layout_height="191dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/encuestaCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDefault">

        <RadioButton
            android:id="@+id/juegoFallout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fallout" />

        <RadioButton
            android:id="@+id/juegoDarkS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/darkSouls" />

        <RadioButton
            android:id="@+id/juegoIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inazuma" />

        <RadioButton
            android:id="@+id/juegoLol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lol" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/encuestaCheck"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="134dp"
        android:text="@string/opinionDef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zonaElección" />

</androidx.constraintlayout.widget.ConstraintLayout>